@@ -1,3 +1,7 @@
+2008-10-04  Dmitry Dulepov  <dmitry@typo3.org>
+
+	* Fixed bug #9479: Selected items are not visible after saving the form in BE
+
 2008-10-03  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Fixed bug #9452: config.absRefPrefix is applied only to a fixed set of directories
